--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="external/jquery-ui/themes/base/jquery-ui.css">
-
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body class="fluid-container">
 <header><img id="logo" src="assets/img/logoB.png" alt="logo autocars lozere"></header>
